Closed
Bug 108791
Opened 24 years ago
Closed 24 years ago
classic theme: crash when accessing the Autocomplete Prefs dialog
Categories
(SeaMonkey :: Preferences, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: bugzilla, Assigned: sfraser_bugs)
References
Details
(Keywords: crash, platform-parity)
Attachments
(3 files)
|
28.62 KB,
text/plain
|
Details | |
|
7.46 KB,
text/plain
|
Details | |
|
5.42 KB,
patch
|
saari
:
review+
sfraser_bugs
:
superreview+
|
Details | Diff | Splinter Review |
found this using 2001.11.06.08-comm bits on mac os 10.1. only occurs with
classic theme, not in modern.
1. open Preferences dialog and go to the Smart Browsing panel.
2. in the "Location Bar Autocomplete" section, click the "Advanced" button.
result: crash.
has anyone seen this on mac os 9.x? it doesn't happen on win32 or linux.
| Reporter | ||
Comment 1•24 years ago
|
||
drat, i'm not having luck getting trace info... anyone else?
will try a few other things to get more crash info...
| Reporter | ||
Comment 2•24 years ago
|
||
also crashes on 9.1 --however, the talkback trace was useless. will attach
macsbug trace soon.
| Reporter | ||
Comment 3•24 years ago
|
||
| Assignee | ||
Comment 4•24 years ago
|
||
Looks like nsEventStateManager::ShiftFocus() is recursing and blowing the stack.
Comment 5•24 years ago
|
||
dupe of bug 108714 ?
| Assignee | ||
Comment 6•24 years ago
|
||
No, stack is different.
| Reporter | ||
Comment 8•24 years ago
|
||
joe, this also crashes on Mac OS 9.x --it isn't limited to OS X.
This also happened to me just minutes ago on 9.1. Crashed into macsbug, "es"
would not work, had to reboot.
Comment 10•24 years ago
|
||
*** Bug 111902 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 11•24 years ago
|
||
Does this still happen?
| Reporter | ||
Comment 12•24 years ago
|
||
yep, still crashing --at least with a build from 2001.12.10.08 [commercial].
Comment 13•24 years ago
|
||
Problem still happens with 0.9.7 running under Mac OS 9.1. I will attach a
macsbug trace.
Comment 14•24 years ago
|
||
Comment 15•24 years ago
|
||
I encountered this today - totally trashed my system... with the little "bomb"
icon...
| Reporter | ||
Comment 16•24 years ago
|
||
*** Bug 121715 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 17•24 years ago
|
||
Note that bug 112993 shows a similar stack trace.
| Assignee | ||
Comment 18•24 years ago
|
||
The problem here is that nsEventStateManger::ShiftFocus can find nothing to focus
(since Mac classic skin doesn't have all focussable widgets), so it just recurses
to death.
Comment 19•24 years ago
|
||
This should guard against the infinite recursion. If we pass the end of the
same document twice while looking for focusable content, we'll stop.
| Assignee | ||
Comment 20•24 years ago
|
||
Comment on attachment 67174 [details] [diff] [review]
patch
Tested the patch, it fixes the crash and works fine. sr=sfraser
Attachment #67174 -
Flags: superreview+
Comment 21•24 years ago
|
||
Comment on attachment 67174 [details] [diff] [review]
patch
r=saari
Attachment #67174 -
Flags: review+
Comment 22•24 years ago
|
||
checked in.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Comment 23•24 years ago
|
||
*** Bug 112993 has been marked as a duplicate of this bug. ***
| Reporter | ||
Comment 24•24 years ago
|
||
vrfy'd fixed using 2002.02.04.17 comm bits on 10.1.2. no more crashing!
Status: RESOLVED → VERIFIED
| Assignee | ||
Comment 25•24 years ago
|
||
*** Bug 123796 has been marked as a duplicate of this bug. ***
Comment 26•23 years ago
|
||
see also bug #195011 (and bug #137191, which are nearly dups.)
these is another version of this bug that involve xul documents with browser
elements, which we try to tab into.
Updated•21 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•