bug 108791 - infinite recursion crash when tabbing if there is no focusable content.  r=saari, sr=sfraser.